--- a/src/app/pages/home/tab1.page.html
+++ b/src/app/pages/home/tab1.page.html
@@ -15,144 +15,131 @@
         </div>
       </ion-col>
 
-        <!-- col-03 for Setting-icon -->
-        <ion-col size="3"> 
-          <div id="setting-icon">
-            <!-- ripple effect -->
-            <div class="ion-activatable ripple">
-                <ion-ripple-effect type = "unbounded"></ion-ripple-effect>
-                <!-- setting icon -->
-                <ion-icon src="../../../assets/icon/settings-icon.svg" id="setting-padd" (click)= "openSettingModal()"></ion-icon>
-            </div>   
+      <!-- col-03 for Setting-icon -->
+      <ion-col size="3">
+        <div id="setting-icon">
+          <!-- ripple effect -->
+          <div class="ion-activatable ripple">
+            <ion-ripple-effect type="unbounded"></ion-ripple-effect>
+            <!-- setting icon -->
+            <ion-icon
+              src="../../../assets/icon/settings-icon.svg"
+              id="setting-padd"
+              (click)="openSettingModal()"
+            ></ion-icon>
           </div>
-        </ion-col>
-      </ion-row>
+        </div>
+      </ion-col>
+    </ion-row>
   </ion-grid>
   <!-- HEADER END -->
 
   <!-- CONTENT-01 STARTS -->
-  <!-- <div id="center">
-  <ion-grid>
-    row-01 image
-    <ion-row>
-      <ion-col>
-        <div id="not-found-image" class="align-items-center">
-            <img src="../../../assets/B2-images/not_found.svg">
-        </div>
-      </ion-col>
-    </ion-row>
-
-    row-02 image
-    <ion-row>
-      <ion-col size="12">
-          <div id="not-found-text" class="align-items-center">
-            <p>Sorry, No feeds available for your <br> prefered category!</p>
+  <div id="center" *ngIf="!feedPosts">
+    <ion-grid>
+      <!-- row-01 image -->
+      <ion-row>
+        <ion-col>
+          <div id="not-found-image" class="align-items-center">
+            <img src="../../../assets/B2-images/not_found.svg" />
           </div>
-      </ion-col>
-    </ion-row>
-  </ion-grid>
-</div> -->
+        </ion-col>
+      </ion-row>
+
+      <!-- row-02 image -->
+      <ion-row>
+        <ion-col size="12">
+          <div id="not-found-text" class="align-items-center">
+            <p>
+              Sorry, No feeds available for your <br />
+              prefered category!
+            </p>
+          </div>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </div>
   <!-- CONTENT-01 ENDS -->
 
-
- 
- 
-
-
-
   <!-- CONTENT-02 STARTS -->
-  <ion-grid>
-  <ion-row class=" noPaddingMargin largeDeviceAlignment" >
-    <ion-card>
-      <!-- Post Header -->
-      <ion-card-header>
-        <ion-row class="noPaddingMargin">
-          <!-- Post Avatar -->
-          <ion-col size="2" class="noPaddingMargin">
-            <ion-avatar class="noPaddingMargin" id="postAvatar"></ion-avatar>
-          </ion-col>
-          <!-- Post (UserName, Category, Date) -->
-          <ion-col size="10" class="noPaddingMargin">
-            <ion-row id="postUserNameAlignment" class="paddingLeft">
-              <h4 class="noPaddingMargin">Poorvasha</h4>
-            </ion-row>
-            <ion-row id="postCategoryDateDetails" class="paddingLeft">
-              <h4 class="noPaddingMargin">Science
-                <hr class="noPaddingMargin">
-                <span>20th Jul,2020</span></h4>
-            </ion-row>
-          </ion-col>
-        </ion-row>
-      </ion-card-header>
-      <!-- Post Header Ends -->
+  <ion-grid *ngIf="feedPosts">
+    <ion-row
+      class="noPaddingMargin largeDeviceAlignment"
+      *ngFor="let post of feedPosts; let i = index"
+    >
+      <ion-card>
+        <!-- Post Header -->
+        <ion-card-header>
+          <ion-row class="noPaddingMargin">
+            <!-- Post Avatar -->
+            <ion-col size="2" class="noPaddingMargin">
+              <ion-avatar class="noPaddingMargin" id="postAvatar">
+                <img
+                  *ngIf="post.userDetails.profilePic"
+                  src="{{post.userDetails.profilePic}}"
+                  alt=""
+                />
+              </ion-avatar>
+            </ion-col>
+            <!-- Post (UserName, Category, Date) -->
+            <ion-col size="10" class="noPaddingMargin">
+              <ion-row id="postUserNameAlignment" class="paddingLeft">
+                <h4 class="noPaddingMargin">{{post.userDetails.name}}</h4>
+              </ion-row>
+              <ion-row id="postCategoryDateDetails" class="paddingLeft">
+                <h4 class="noPaddingMargin">
+                  Science
+                  <hr class="noPaddingMargin" />
+                  <span>{{formatDate(post.date)}}</span>
+                </h4>
+              </ion-row>
+            </ion-col>
+          </ion-row>
+        </ion-card-header>
+        <!-- Post Header Ends -->
 
-      <!-- Post Content -->
-      <ion-card-content id="postContent">
-        There is nothing good or bad it’s all about the characterization
-        the more you express the more you are
-      </ion-card-content>
-      <img src="../../../assets/B2-images/flower.png" class="img-responisve">
-      <!-- Post Content Ends -->
+        <!-- Post Content -->
+        <ion-card-content id="postContent">
+          {{post.text}}
+        </ion-card-content>
+        <img *ngIf="post.image" src="{{post.image}}" class="img-responisve" />
+        <!-- Post Content Ends -->
 
-      <!-- Post Footer -->
+        <!-- Post Footer -->
         <ion-row class="noPaddingMargin bottomPadding">
           <!-- StarIcon with count -->
-            <ion-icon class="iconResize" id="star" src="../../../assets/icon/unstar-icon.svg"></ion-icon>
-            <ion-badge class="countStyle noPaddingMargin">20</ion-badge>
+          <ion-icon
+            (click)="updateLike(i)"
+            *ngIf="!post.liked"
+            class="iconResize"
+            id="star"
+            src="../../../assets/icon/unstar-icon.svg"
+          ></ion-icon>
+          <ion-icon
+            (click)="updateDisLike(i)"
+            *ngIf="post.liked"
+            class="iconResize"
+            id="star"
+            src="../../../assets/icon/star.svg"
+          ></ion-icon>
+          <ion-badge
+            class="countStyle noPaddingMargin"
+            *ngIf="post.likes.length"
+            >{{numberFormat(post.likes.length)}}</ion-badge
+          >
           <!-- CommentIcon with count -->
-            <ion-icon class="iconResize" id="comment" src="../../../assets/icon/comment-icon.svg"></ion-icon>
-            <ion-badge class="countStyle noPaddingMargin">20</ion-badge>
+          <ion-icon
+            class="iconResize"
+            id="comment"
+            src="../../../assets/icon/comment-icon.svg"
+            (click)="openCommentsModal(post.id)"
+          ></ion-icon>
+          <ion-badge class="countStyle noPaddingMargin" *ngIf="post.comments"
+            >{{post.comments.length}}</ion-badge
+          >
         </ion-row>
-      <!-- Post Footer Ends -->
-    </ion-card>
-  </ion-row>
-
-
-  <ion-row class=" noPaddingMargin largeDeviceAlignment">
-    <ion-card>
-      <!-- Post Header -->
-      <ion-card-header>
-        <ion-row class="noPaddingMargin">
-          <!-- Post Avatar -->
-          <ion-col size="2" class="noPaddingMargin">
-            <ion-avatar class="noPaddingMargin" id="postAvatar"></ion-avatar>
-          </ion-col>
-          <!-- Post (UserName, Category, Date) -->
-          <ion-col size="10" class="noPaddingMargin">
-            <ion-row id="postUserNameAlignment" class="paddingLeft">
-              <h4 class="noPaddingMargin">Poorvasha</h4>
-            </ion-row>
-            <ion-row id="postCategoryDateDetails" class="paddingLeft">
-              <h4 class="noPaddingMargin">Science
-                <hr class="noPaddingMargin">
-                <span>20th Jul,2020</span></h4>
-            </ion-row>
-          </ion-col>
-        </ion-row>
-      </ion-card-header>
-      <!-- Post Header Ends -->
-
-      <!-- Post Content -->
-      <ion-card-content id="postContent">
-        There is nothing good or bad it’s all about the characterization
-        the more you express the more you are
-      </ion-card-content>
-      <img src="../../../assets/B2-images/flower.png" class="img-responisve">
-      <!-- Post Content Ends -->
-
-      <!-- Post Footer -->
-        <ion-row class="noPaddingMargin bottomPadding">
-          <!-- StarIcon with count -->
-            <ion-icon class="iconResize" id="star" src="../../../assets/icon/unstar-icon.svg"></ion-icon>
-            <ion-badge class="countStyle noPaddingMargin">{{ count }}</ion-badge>
-          <!-- CommentIcon with count -->
-            <ion-icon class="iconResize" id="comment" src="../../../assets/icon/comment-icon.svg"></ion-icon>
-            <ion-badge class="countStyle noPaddingMargin">20</ion-badge>
-        </ion-row>
-      <!-- Post Footer Ends -->
-    </ion-card>
-  </ion-row>
-  <!-- CONTENT-02 ENDS -->
-</ion-grid>
-
+        <!-- Post Footer Ends -->
+      </ion-card>
+    </ion-row>
+  </ion-grid>
 </ion-content>
