--- a/src/app/pages/post/post.page.html
+++ b/src/app/pages/post/post.page.html
@@ -87,7 +87,7 @@
       <!-- Image deletion (closing of image) -->
       <ion-row>
         <ion-col>
-          <ion-avatar class="into-avatar">
+          <ion-avatar class="into-avatar" (click)="removeImage()">
             <img class="into-size" src="../../assets/icon/pinkinto.svg" />
           </ion-avatar>
         </ion-col>
