--- a/src/app/pages/profile/tab2.page.scss
+++ b/src/app/pages/profile/tab2.page.scss
@@ -19,7 +19,7 @@ ion-content {
 /*Avatar Display*/
 .avatarAlignment {
   padding: 0;
-  margin: 0;
+  margin-top: 0px;
   display: flex;
   justify-content: center;
 }
