[IMP] MAIN: Dark Mode added but not implmented

--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -11,7 +11,7 @@
     </ion-row>
     <ion-row class="margin">
       <ion-col class="text-center">
-        <img src="../../../assets/icon/favicon.png" />
+        <img src="../../../assets/icon/Rafo_Logo.svg" />
       </ion-col>
     </ion-row>
 
