--- a/src/app/pages/signup/signup.page.html
+++ b/src/app/pages/signup/signup.page.html
@@ -13,7 +13,7 @@
     </ion-row>
     <ion-row class="margin text-center">
       <ion-col>
-        <img src="../../../assets/icon/favicon.png" />
+        <img src="../../../assets/icon/Rafo_Logo.svg" />
       </ion-col>
     </ion-row>
 
