--- a/src/app/pages/login/login.page.scss
+++ b/src/app/pages/login/login.page.scss
@@ -1,5 +1,6 @@
 img {
-  width: 150px;
+  width: 80px;
+  margin-bottom: 80px;
 }
 
 .text-center {
@@ -25,7 +26,7 @@ img {
 }
 
 .login-btn {
-  height: 20vh;
+  height: 30vh;
   display: flex;
   justify-content: center;
   align-items: flex-end;
